# robotics-second_project-2023

./: CMakeLists.txt  README.md  config_mapping.rviz  config_nav.rviz  info.txt  package.xml  waypoints.csv
cfg/: common_costmap_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  slam_toolbox_params.yaml  teb_local_planner_params.yaml
launch/: mapping.launch  navigation.launch
map_raw/: first_2d.pgm  first_2d.yaml  first_3d.pgm  first_3d.yaml  second_2d.pgm  second_2d.yaml  second_3d.pgm  second_3d.yaml
src/: navigation.cpp  tf_publisher.cpp
stage/: main.world  map.inc  robot.inc
stage/second_2d/: second_2d.yaml
