<?xml version="1.0"?>
<package format="2">
  <name>second_project</name>
  <version>0.0.0</version>
  <description>The second_project package</description>

  <maintainer email="tazdevil971@gmail.com">Davide Mor</maintainer>
  <maintainer email="fabri.monti.fm@gmail.com">Fabrizio Monti</maintainer>
  <maintainer email="gabriele1.oberti@mail.polimi.it">Gabriele Oberti</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>  
  <build_export_depend>actionlib</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>

  <export>
  </export>
</package>
